--- a/insurancerenewal.html
+++ b/insurancerenewal.html
@@ -529,7 +529,7 @@
                 <span class="plan-detail-label">Your Previous Insurer</span>
                 <div class="insurer-header">
                   <img
-                    src="https://via.placeholder.com/100x40?text=Zurich+Kotak"
+                    src="https://cms.zurichkotak.com/uploads/logo_f4a3ce7ab4.svg"
                     alt="Zurich Kotak"
                     class="insurer-logo"
                   />
